--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "electron-svelte-typescript",
-  "description": "Template for desktop apps written with Electron, Svelte and Typescript.",
+  "name": "ai-widget",
+  "description": "AI assistant widget",
   "version": "0.1.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fuzzc0re/electron-svelte-typescript.git"
   },
   "author": {
-    "name": "fuzzc0re",
-    "email": "fuzzc0re@protonmail.com",
-    "url": "https://github.com/fuzzc0re"
+    "name": "Samsonium",
+    "email": "tdesu@vk.com",
+    "url": "https://github.com/samsonium"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/fuzzc0re/electron-svelte-typescript/issues"
+    "url": "https://github.com/samsonium/ai-widget/issues"
   },
   "keywords": [
     "electron",
@@ -60,6 +60,7 @@
     "preversion": "npm-run-all -s lint format"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "electron-log": "^4.3.5",
     "electron-store": "^8.0.0",
     "electron-updater": "^5.2.1"
@@ -103,8 +104,8 @@
     "typescript": "^4.3.4"
   },
   "build": {
-    "productName": "Electron Svelte Typescript",
-    "appId": "electron.svelte.typescript",
+    "productName": "AI Assistant",
+    "appId": "ru.samsonium.ai",
     "copyright": "Copyright © 2021 ${author}",
     "win": {
       "target": [
@@ -137,8 +138,8 @@
     "publish": [
       {
         "provider": "github",
-        "owner": "fuzzc0re",
-        "repo": "electron-svelte-typescript"
+        "owner": "samsonium",
+        "repo": "ai-widget"
       }
     ]
   }
