--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "axios": "^1.4.0",
     "electron-log": "^4.3.5",
     "electron-store": "^8.0.0",
-    "electron-updater": "^5.2.1"
+    "electron-updater": "^5.2.1",
+    "phosphor-svelte": "^1.3.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.2",
